# job-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
config/profiles/: example.yaml
docs/superpowers/plans/: 2026-05-06-pipeline-refactor-error-handling.md  2026-05-06-test-coverage.md
migrations/: env.py
scripts/: apply_external_ats.py  glassdoor_debug.py  glassdoor_debug2.py  glassdoor_debug3.py  glassdoor_discover_and_apply.py  glassdoor_login_only.py  indeed_login_and_apply.py  indeed_login_only.py  test_apply.py
src/job_agent/: __init__.py  config.py  main.py
tests/: conftest.py
tests/unit/: test_ai_client.py  test_ai_defensive_parsing.py  test_auth.py  test_base_applicator.py  test_bookmark.py  test_bot_commands.py  test_browser_manager.py  test_cold_email.py  test_config.py  test_config_env_override.py  test_cover_letter.py  test_crypto.py  test_dashboard.py  test_dashboard_health.py  test_dedup.py  test_digest.py  test_discord_bot.py  test_drivers.py  test_engine.py  test_external_ats.py  test_failed_app_record.py  test_followup.py  test_job_matcher.py  test_json_helpers.py  test_latex_resume.py  test_logging_context.py  test_models.py  test_notifications.py  test_pipeline_steps.py  test_proxy.py  test_queue.py  test_rate_limiter.py  test_resume_preview.py  test_resume_tailor.py  test_retry.py  test_screening.py  test_task_runner.py  test_telegram_bot.py
(+58 files in other folders)
