[project]
name = "job-agent"
version = "0.1.0"
description = "Autonomous job application agent with AI-powered matching, CV tailoring, and multi-platform support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "anthropic>=0.40",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "flask>=3.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "click>=8.1",
    "structlog>=24.0",
    "apscheduler>=3.10",
    "weasyprint>=62.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.scripts]
job-agent = "job_agent.main:cli"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.12",
]
